se modifican mas datos del front

--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/indexEmpresa.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/indexEmpresa.html
@@ -108,7 +108,7 @@
                 <tbody>
                   <tr>
                     <td class="d-flex">
-                      <a class="btn" href="../altaOferta.html"
+                      <a class="btn" href="./altaOferta.html"
                         >Alta oferta laboral</a
                       >
                     </td>
@@ -225,7 +225,7 @@
                     </p>
                   </div>
                   <div class="card-footer border-0 bg-white text-end">
-                    <a href="../Empresa/oferta.html" class="btn btn-primary"
+                    <a href="./ofertaEmpresa.html" class="btn btn-primary"
                       >Mas Info</a
                     >
                   </div>
@@ -254,7 +254,7 @@
                     </p>
                   </div>
                   <div class="card-footer border-0 bg-white text-end">
-                    <a href="../Empresa/oferta.html" class="btn btn-primary"
+                    <a href="./ofertaEmpresaMarqueting.html" class="btn btn-primary"
                       >Mas Info</a
                     >
                   </div>
