--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Visitante/consultaOfertaLaboralVisitante.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Visitante/consultaOfertaLaboralVisitante.html
@@ -186,7 +186,7 @@
                     </p>
                   </div>
                   <div class="card-footer border-0 bg-white text-end">
-                    <a href="./ofertaEmrpesa.html" class="btn btn-primary"
+                    <a href="./ofertaVisitante.html" class="btn btn-primary"
                       >Mas Info</a
                     >
                   </div>
@@ -215,7 +215,7 @@
                     </p>
                   </div>
                   <div class="card-footer border-0 bg-white text-end">
-                    <a href="./ofertaEmrpesa.html" class="btn btn-primary"
+                    <a href="./consultaOfertaLaboralVisitanteMarketing.html" class="btn btn-primary"
                       >Mas Info</a
                     >
                   </div>
