--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/altaOferta.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/altaOferta.html
@@ -23,7 +23,7 @@
       <div class="container">
         <div class="row w-100 justify-content-between align-items-center">
           <div class="col-2">
-            <a href="../../index.html"
+            <a href="./indexEmpresa.html"
               ><img
                 src="../../img/Logo.svg"
                 alt="Logo"
@@ -280,7 +280,7 @@
 
             <div class="camposForm" id="divSeleccionPaquete">
               <label for="listPaquetes">*Selecciona un paquete:</label>
-              <select class="form-control" id="listPaquetes" required>
+              <select class="form-control" id="listPaquetes">
                 <option value="">-- Selecciona un paquete --</option>
                 <option value="Paquete 1">Básico</option>
                 <option value="Paquete 2">Destacado</option>
