--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/consultaDePaqueteDeTiposDePublicacionOfertaLaboral.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/consultaDePaqueteDeTiposDePublicacionOfertaLaboral.html
@@ -145,7 +145,7 @@
                   </tr>
                   <tr>
                     <td class="d-flex">
-                      <a class="btn" href="./consultaOferta.html"
+                      <a class="btn" href="./consultaOfertaLaboralEmpresa.html"
                         >Consulta ofertas laborales</a
                       >
                     </td>
