--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/consultarMiPerfilEmpresa.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/consultarMiPerfilEmpresa.html
@@ -103,7 +103,7 @@
               </tr>
               <tr>
                 <td class="d-flex">
-                  <a class="btn" href="">Consulta ofertas laborales</a>
+                  <a class="btn" href="./consultaOfertaLaboralEmpresa.html">Consulta ofertas laborales</a>
                 </td>
               </tr>
             </tbody>
