agregada la postulacion de matilo

--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/ofertaEmpresa.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/ofertaEmpresa.html
@@ -290,6 +290,18 @@
                     <a href="#" class="btn btn-primary">Postulacion</a>
                   </div>
                 </div>
+                <div class="card">
+                  <img
+                    src="../../img/Usuarios/Postulantes/Postulante01.png"
+                    class="card-img-top"
+                  />
+                  <div class="card-body">
+                    <p class="card-text">
+                      <a href="./perfilGeneralPostulante.html">matilo</a>
+                    </p>
+                    <a href="#" class="btn btn-primary">Postulacion</a>
+                  </div>
+                </div>
               </div>
             </div>
           </section>
