agregado nombre empresa en ofertas

--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/ofertaEmpresaMarqueting.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/ofertaEmpresaMarqueting.html
@@ -238,8 +238,11 @@
                           </li>
                           <li class="list-group-item"><b>Costo:</b> 4000</li>
                           <li class="list-group-item">
-                            <b>Tipo de Publicacion:</b> <a>Premium</a>
+                            <b>Tipo de Publicacion:</b> <a href="./TipoPublicacion.html">Premium</a>
                           </li>
+                          <li class="list-group-item">
+                                <b>Empresa:</b> <a href="./consultarMiPerfilEmpresa.html"> EcoTech</a>
+                              </li>
                           <li class="list-group-item">
                             <b>Keywords:</b> 
                           </li>
