--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/ofertaPostulanteNoPostulado.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/ofertaPostulanteNoPostulado.html
@@ -230,8 +230,11 @@
                             <b>Fecha de alta:</b> 15/08/23
                           </li>
                           <li class="list-group-item">
-                            <b>Tipo de Publicacion:</b> <a>Premium</a>
+                            <b>Tipo de Publicacion:</b> <a href="./TipoPublicacion.html">Premium</a>
                           </li>
+                          <li class="list-group-item">
+                                <b>Empresa:</b> <a href="./perfilGeneralEmpresa.html"> EcoTech</a>
+                              </li>
                           <li class="list-group-item">
                             <b>Keywords:</b> 
                           </li>
