se cambian nombre de pestañas en paginas

--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/altaOferta.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/altaOferta.html
@@ -15,7 +15,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="../../css/general.css" />
-    <title>Alta Oferta</title>
+    <title>Alta oferta</title>
   </head>
 
   <body class="min-vh-100 d-flex flex-column">
