--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/consultaDePaqueteDeTiposDePublicacionOfertaLaboral.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/consultaDePaqueteDeTiposDePublicacionOfertaLaboral.html
@@ -19,7 +19,7 @@
       rel="stylesheet"
       href="../../css/consultaDePaqueteDeTiposDePublicacionDeOfertaLaborl.css"
     />
-    <title>Trabajo.uy</title>
+    <title>Consulta de paquete</title>
   </head>
 
   <body>
