--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/consultaDeTipoDePublicacionDeOfertaLaboral.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/consultaDeTipoDePublicacionDeOfertaLaboral.html
@@ -19,7 +19,7 @@
       rel="stylesheet"
       href="../../css/consultaDeTiposDePublicacionDeOfertaLaboral.css"
     />
-    <title>Trabajo.uy</title>
+    <title>Consulta de tipo de publicación</title>
   </head>
 
   <body>
