--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/ofertaEmpresa.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/ofertaEmpresa.html
@@ -290,7 +290,7 @@
                     <p class="card-text">
                       <a href="./perfilGeneralPostulante.html">lgarcia</a>
                     </p>
-                    <a href="#" class="btn btn-primary">Postulacion</a>
+                    <a href="./miPostulacionEmpresa.html" class="btn btn-primary">Postulacion</a>
                   </div>
                 </div>
                 <div class="card">
@@ -302,7 +302,7 @@
                     <p class="card-text">
                       <a href="./perfilGeneralPostulante.html">matilo</a>
                     </p>
-                    <a href="#" class="btn btn-primary">Postulacion</a>
+                    <a href="./miPostulacionEmpresa.html" class="btn btn-primary">Postulacion</a>
                   </div>
                 </div>
               </div>
