--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/consultarMiPerfilPostulante.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/consultarMiPerfilPostulante.html
@@ -21,7 +21,7 @@
       referrerpolicy="no-referrer"
     />
     <!--Para poder usar font-awesome-->
-    <title>Consulta Usuario</title>
+    <title>Perfil</title>
   </head>
 
   <body>
