--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Visitante/perfilGeneralEmpresa.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Visitante/perfilGeneralEmpresa.html
@@ -25,7 +25,7 @@
       referrerpolicy="no-referrer"
     />
     <!--Para poder usar font-awesome-->
-    <title>Perfil Usuario</title>
+    <title>Perfil Empresa</title>
   </head>
 
   <body>
