--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/consultaOfertaLaboralEmpresa.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/consultaOfertaLaboralEmpresa.html
@@ -15,7 +15,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="../../css/general.css" />
-    <title>Consulta Oferta</title>
+    <title>Consulta oferta laboral</title>
   </head>
 
   <body>
