--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/miPostulacionEmpresa.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/miPostulacionEmpresa.html
@@ -9,23 +9,23 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
-    <link rel="icon" type="image/x-icon" href="./recourse/img/Icon_Logo.svg" />
+    <link rel="icon" type="image/x-icon" href="../../img/Logo.svg" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css"
     />
-    <link rel="stylesheet" href="./recourse/css/general.css" />
-    <title>Inicio</title>
+    <link rel="stylesheet" href="../../css/general.css" />
+    <title>Postulación</title>
   </head>
 
-  <body class="mb-4">
+  <body>
     <nav class="navbar navbar-expand-lg">
       <div class="container">
         <div class="row w-100 justify-content-between align-items-center">
           <div class="col-2">
-            <a href="./index.html"
+            <a href="./indexEmpresa.html"
               ><img
-                src="./recourse/img/Logo.svg"
+                src="../../img/Logo.svg"
                 alt="Logo"
                 class="navbar-brand img-fluid"
             /></a>
@@ -50,17 +50,43 @@
               </div>
             </div>
           </div>
-          <div class="col-2">
+          <div class="col-3">
             <ul class="navbar-nav justify-content-evenly fs-3">
               <li class="nav-item">
-                <a class="nav-link text-white" href="./index.html">Inicio</a>
+                <a class="nav-link text-white" href="./indexEmpresa.html"
+                  >Inicio</a
+                >
               </li>
               <li class="nav-item">
-                <a
-                  class="nav-link text-white"
-                  href="./recourse/menu/inicioSession.html"
-                  >Acceder</a
-                >
+                <img
+                  class="rounded-pill imgPerfil"
+                  src="../../img/Usuarios/Empresas/Empresa01.jpg"
+                />
+              </li>
+              <li class="nav-item">
+                <div class="dropdown selectUsuario">
+                  <button
+                    type="button"
+                    class="btn dropdown-toggle"
+                    data-bs-toggle="dropdown"
+                  >
+                    EcoTech
+                  </button>
+                  <ul class="dropdown-menu">
+                    <li>
+                      <a
+                        class="dropdown-item"
+                        href="./consultarMiPerfilEmpresa.html"
+                        >Perfil</a
+                      >
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="../../../index.html"
+                        >Cerrar Sessión</a
+                      >
+                    </li>
+                  </ul>
+                </div>
               </li>
             </ul>
           </div>
@@ -82,9 +108,14 @@
                 <tbody>
                   <tr>
                     <td class="d-flex">
-                      <a
-                        class="btn"
-                        href="./recourse/menu/Visitante/consultaUsuario.html"
+                      <a class="btn" href="./altaOferta.html"
+                        >Alta oferta laboral</a
+                      >
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="d-flex">
+                      <a class="btn" href="./consultaUsuario.html"
                         >Consulta usuarios</a
                       >
                     </td>
@@ -93,7 +124,7 @@
                     <td class="d-flex">
                       <a
                         class="btn"
-                        href="./recourse/menu/Visitante/consultaDeTipoDePublicacionDeOfertaLaboral.html"
+                        href="./consultaDeTipoDePublicacionDeOfertaLaboral.html"
                         >Ver tipos de publicaciones</a
                       >
                     </td>
@@ -102,16 +133,14 @@
                     <td class="d-flex">
                       <a
                         class="btn"
-                        href="./recourse/menu/Visitante/consultaDePaqueteDeTiposDePublicacionDeOfertaLaboral.html"
+                        href="./consultaDePaqueteDeTiposDePublicacionOfertaLaboral.html"
                         >Ver tipos de paquetes</a
                       >
                     </td>
                   </tr>
                   <tr>
                     <td class="d-flex">
-                      <a
-                        class="btn"
-                        href="./recourse/menu/Visitante/consultaOfertaLaboralVisitante.html"
+                      <a class="btn" href="./consultaOfertaLaboralEmpresa.html"
                         >Consulta ofertas laborales</a
                       >
                     </td>
@@ -172,79 +201,60 @@
             </div>
           </section>
         </div>
-        <div class="col-8">
-          <section>
-            <div class="card">
-              <div class="row g-0">
-                <div
-                  class="col-md-4 justify-content-center align-items-center d-flex"
-                >
-                  <img
-                    src="./recourse/img/ofertas/Oferta01.png"
-                    class="img-fluid rounded-start"
-                    alt="Imagen Oferta"
-                  />
+            <!-- Columna central para la tarjeta existente -->
+            <div class="col-md-6">
+                <!-- Contenido de la tarjeta existente aquí -->
+                <div class="card mb-3">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="../../img/Usuarios/Postulantes/Postulante01.png" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Postulación a oferta laboral</h5>
+                                <p class="card-text">
+                                    <strong>Postulante: </strong> <a href="consultarMiPerfilPostulante.html">Lucía García</a>
+                                    <br>
+                                    <br>
+                                    <strong>CV reducido: </strong> Licenciada en Administración,
+                                    experiencia en gestión de equipos y proyectos.
+                                    Conocimientos en Microsoft Office.
+                                    <br>
+                                    <br>
+                                    <strong>Motivación: </strong> Estoy emocionada por
+                                    la oportunidad de formar parte de un equipo
+                                    dinámico y contribuir con mis habilidades de
+                                    liderazgo.
+                                    <br>
+                                    <br>
+                                    <strong>Fecha de postulación: </strong> 16/08/23
+                                    <br>
+                                    <br>
+                                    <div class="row justify-content-center buttons-container">
+                                    </div>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-8">
-                  <div class="card-body">
-                    <h5 class="card-header p-0 border-0 bg-white text-start">
-                      Desarrollador Frontend
-                    </h5>
-                    <p class="card-text">
-                      Únete a nuestro equipo de desarrollo frontend y crea
-                      experiencias de usuario excepcionales.
-                    </p>
-                  </div>
-                  <div class="card-footer border-0 bg-white text-end">
-                    <a
-                      href="./recourse/menu/Visitante/oferta.html"
-                      class="btn btn-primary"
-                      >Mas Info</a
-                    >
-                  </div>
-                </div>
-              </div>
             </div>
-            <div class="card">
-              <div class="row g-0">
-                <div
-                  class="col-md-4 justify-content-center align-items-center d-flex"
-                >
-                  <img
-                    src="./recourse/img/ofertas/Oferta07.jpeg"
-                    class="img-fluid rounded-start"
-                    alt="Imagen Oferta"
-                  />
+            <!-- Columna derecha para la última card -->
+            <div class="col-md-3">
+                <!-- Contenido de la última card aquí -->
+                <div class="card">
+                    <img src="../../img/ofertas/Oferta01.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <a href="./ofertaEmpresa.html" class="card-link">
+                            <h5 class="card-title text-center">Desarrollador Frontend</h5>
+                        </a>
+                    </div>
                 </div>
-                <div class="col-md-8">
-                  <div class="card-body">
-                    <h5 class="card-header p-0 border-0 bg-white text-start">
-                      A. de Marketing Digital
-                    </h5>
-                    <p class="card-text">
-                      Únete a nuestro equipo de marketing y trabaja en
-                      estrategias digitales innovadoras.
-                    </p>
-                  </div>
-                  <div class="card-footer border-0 bg-white text-end">
-                    <a
-                      href="./recourse/menu/Visitante/oferta.html"
-                      class="btn btn-primary"
-                      >Mas Info</a
-                    >
-                  </div>
-                </div>
-              </div>
             </div>
-          </section>
         </div>
-      </div>
-      <div></div>
-    </main>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js" integrity="sha384-rfFPp5f5I5fHgBkof8K7jO5/Jz7PoCmMF+L5z5q8Zw5dIdFm0iXb5V5Dj6P5d5F5D" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
+    </script>
+</body>
 </html>
