--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/perfilGeneralEmpresa.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/perfilGeneralEmpresa.html
@@ -15,7 +15,7 @@
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--Para poder usar font-awesome-->
-    <title>Perfil Usuario</title>
+    <title>Perfil Empresa</title>
 </head>
 
 <body>
