--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Visitante/TipoPublicacion.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Visitante/TipoPublicacion.html
@@ -15,9 +15,8 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="../../css/general.css" />
-    <title>Consulta Oferta</title>
+    <title>Tipo de publicación</title>
   </head>
-
   <body>
     <nav class="navbar navbar-expand-lg">
       <div class="container">
