--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Visitante/perfilGeneralPostulante.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Visitante/perfilGeneralPostulante.html
@@ -26,7 +26,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="../../css/general.css"/>
-    <title>Perfil Usuario</title>
+    <title>Perfil Postulante</title>
   </head>
 
   <body class="mb-5">
