--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/inicioSession.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/inicioSession.html
@@ -10,7 +10,7 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
-    <title>Inicio Sessión</title>
+    <title>Inicio sesión</title>
   </head>
 
   <body class="login">
