Se agrega postulaciones en perfilpostulante

--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/postulacion.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/postulacion.html
@@ -249,7 +249,7 @@
                       <label for="textAreaCV">*CV reducido</label>
                       <textarea
                         class="form-control"
-                        id="textAreaDescripcion"
+                        id="textAreaDescripcionCV"
                         rows="3"
                         required
                       ></textarea>
@@ -260,7 +260,7 @@
                       <label for="textAreaMotivacion">*Motivacion</label>
                       <textarea
                         class="form-control"
-                        id="textAreaDescripcion"
+                        id="textAreaDescripcionMotivacion"
                         rows="3"
                         required
                       ></textarea>
