--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/consultaUsuario.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/consultaUsuario.html
@@ -1,74 +1,103 @@
 <!DOCTYPE html>
 <html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
+    <link rel="icon" type="image/x-icon" href="../../img/Icon_Logo.svg" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css"
+    />
+    <link rel="stylesheet" href="../../css/general.css" />
+    <link
+      rel="stylesheet"
+      href="../../css/consultaDeTiposDePublicacionDeOfertaLaboral.css"
+    />
+    <title>Trabajo.uy</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <body>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container">
+        <div class="row w-100 justify-content-between align-items-center">
+          <div class="col-2">
+            <a href="./indexEmpresa.html"
+              ><img
+                src="../../img/Logo.svg"
+                alt="Logo"
+                class="navbar-brand img-fluid"
+            /></a>
+          </div>
 
-  <!--Instalación bootstrap-->
-  <link rel="stylesheet" href="../../css/general.css" />
-  <!--Link archivo css-->
-  <link rel="icon" type="image/x-icon" href="../../img/Logo.svg" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <!--Para poder usar font-awesome-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
-  <title>Consulta Usuario</title>
-</head>
-
-<body>
-  <nav class="navbar navbar-expand-lg">
-    <div class="container">
-      <div class="row w-100 justify-content-between align-items-center">
-        <div class="col-2">
-          <a href="./indexEmpresa.html"><img src="../../img/Logo.svg" alt="Logo" class="navbar-brand img-fluid" /></a>
-        </div>
-
-        <div class="col">
-          <div class="row justify-content-center">
-            <div class="col-5">
-              <form class="form-inline">
-                <div class="input-group">
-                  <input class="form-control" type="search" placeholder="Buscar oferta" aria-label="Search" />
-                  <button class="btn btn-outline-success" type="submit">
-                    <i class="bi bi-search text-white"></i>
-                  </button>
-                </div>
-              </form>
+          <div class="col">
+            <div class="row justify-content-center">
+              <div class="col-5">
+                <form class="form-inline">
+                  <div class="input-group">
+                    <input
+                      class="form-control"
+                      type="search"
+                      placeholder="Buscar oferta"
+                      aria-label="Search"
+                    />
+                    <button class="btn btn-outline-success" type="submit">
+                      <i class="bi bi-search text-white"></i>
+                    </button>
+                  </div>
+                </form>
+              </div>
             </div>
+          </div>
+          <div class="col-3">
+            <ul class="navbar-nav justify-content-evenly fs-3">
+              <li class="nav-item">
+                <a class="nav-link text-white" href="./indexEmpresa.html"
+                  >Inicio</a
+                >
+              </li>
+              <li class="nav-item">
+                <img
+                  class="rounded-pill imgPerfil"
+                  src="../../img/Usuarios/Empresas/Empresa01.jpg"
+                  alt="Foto de Perfil"
+                />
+              </li>
+              <li class="nav-item">
+                <div class="dropdown selectUsuario">
+                  <button
+                    type="button"
+                    class="btn dropdown-toggle"
+                    data-bs-toggle="dropdown"
+                  >
+                    EcoTech
+                  </button>
+                  <ul class="dropdown-menu">
+                    <li>
+                      <a
+                        class="dropdown-item"
+                        href="./consultarMiPerfilEmpresa.html"
+                        >Perfil</a
+                      >
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="../../../index.html"
+                        >Cerrar Sessión</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
-
-      <div class="col-3">
-        <ul class="navbar-nav justify-content-evenly fs-3">
-          <li class="nav-item">
-            <a class="nav-link text-white" href="./indexEmpresa.html">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <img class="rounded-pill imgPerfil" src="../../img/Usuarios/Empresas/Empresa01.jpg" alt="Foto de Perfil" />
-          </li>
-          <li class="nav-item">
-            <div class="dropdown selectUsuario">
-              <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown">
-                EcoTech
-              </button>
-              <ul class="dropdown-menu">
-                <li>
-                  <a class="dropdown-item" href="./consultarMiPerfilEmpresa.html">Perfil</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="../../../index.html">Cerrar Sessión</a>
-                </li>
-              </ul>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+    </nav>
 
   <main class="container pt-5">
     <div class="row">
