se modifican links

--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Visitante/perfilGeneralEmpresa.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Visitante/perfilGeneralEmpresa.html
@@ -257,7 +257,7 @@
                       <tbody>
                         <tr>
                           <td>
-                            <a href="./oferta.html">Desarrollador Frontend</a>
+                            <a href="./ofertaVisitante.html">Desarrollador Frontend</a>
                           </td>
                           <td>09:00 - 18:00</td>
                           <td>90000</td>
