--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/consultaUsuario.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/consultaUsuario.html
@@ -112,7 +112,7 @@
             <tbody>
               <tr>
                 <td class="d-flex">
-                  <a class="btn" href="../altaOferta.html">Alta oferta laboral</a>
+                  <a class="btn" href="./altaOferta.html">Alta oferta laboral</a>
                 </td>
               </tr>
               <tr>
@@ -132,7 +132,7 @@
               </tr>
               <tr>
                 <td class="d-flex">
-                  <a class="btn" href="">Consulta ofertas laborales</a>
+                  <a class="btn" href="./consultaOfertaLaboralEmpresa.html">Consulta ofertas laborales</a>
                 </td>
               </tr>
             </tbody>
