--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Visitante/perfilGeneralEmpresa.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Visitante/perfilGeneralEmpresa.html
@@ -87,7 +87,7 @@
                 </tr>
                 <tr>
                   <td class="d-flex">
-                    <a class="btn" href="">Consulta ofertas laborales</a>
+                    <a class="btn" href="./consultaOfertaLaboralVisitante.html">Consulta ofertas laborales</a>
                   </td>
                 </tr>
               </tbody>
