se corrigen links

--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/TipoPublicacion.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/TipoPublicacion.html
@@ -134,7 +134,7 @@
                     <td class="d-flex">
                       <a
                         class="btn"
-                        href="../consultaOfertaLaboralPostulante.html"
+                        href="./consultaOfertaLaboralPostulante.html"
                         >Consulta ofertas laborales</a
                       >
                     </td>
