--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Visitante/consultaDeTipoDePublicacionDeOfertaLaboral.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Visitante/consultaDeTipoDePublicacionDeOfertaLaboral.html
@@ -113,7 +113,7 @@
                   </tr>
                   <tr>
                     <td class="d-flex">
-                      <a class="btn" href="./consultaOferta.html"
+                      <a class="btn" href="./consultaOfertaLaboralVisitante.html"
                         >Consulta ofertas laborales</a
                       >
                     </td>
