--- a/Tarea2/Servidor-Web/src/main/webapp/index.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Gamebook</title>
+	<title>Trabajo UY</title>
 	<!-- Redirige al servlet de iniciar sesión -->
 		<meta http-equiv="refresh" content="0;URL=/Servidor-Web/home">
 	
